--- a/my-blog/assets/css/styles.css
+++ b/my-blog/assets/css/styles.css
@@ -57,16 +57,24 @@ body {
   font-weight: bold;
 }
 
-#useraname,
-#title,
-#context { 
-  width: 240px;
-  display: inline-block;
+.useraname,
+.title,
+.context { 
+  align-self: start;
+  display: block;
   border-style: double;
-  padding: 20px;
-  margin: 0;
   font-size: 50px;
   text-align: left;
+  }
+  
+input {
+  display: block;
+  align-self: start;
+}
+  a {
+    border-style: solid;
+    padding-block: 10px;
+    width: auto;
   }
 
   .footer {
